added new lesson

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="./src/app.css" />
   </head>
   <body>
-    <div class="container"></div>
-    <header class="mainHeader"></header>
-    <main>
-      <ul class="testList">
-      </ul>
-    </main>
+    <header class="mainHeader" data-element="header"></header>
+    <main></main>
+
+    <!-- <ul class="testList"></ul> -->
+    <!-- <div class="container"></div> -->
+
+    <!-- ============= -->
+    <!-- <button class="btn">Open</button> -->
+    <div class="modal"></div>
+
+    
+
     <script src="./src/app.js" type="module"></script>
   </body>
 </html>
